--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ font-family: 'Roboto', sans-serif;
     --background-secondary-color: #F5F4FA;
     --background-footer-color: #2F303A;
     --footer-text-color: #FFFFFF;
+    --social-icon-color: #AFB1B8;
 }
 *,
 *::before,
@@ -43,6 +44,7 @@ p {
     list-style: none;
 }
 .link {
+    display: block;
     text-decoration: none;
     color: inherit;
 }
@@ -69,6 +71,21 @@ p {
     line-height: 1.88;
 
 }
+/* Список иконок соц. сетей */
+.social-list {
+    display: flex;
+    justify-content: space-between;
+}
+.link-social {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+}
+.social-icon {
+    padding: 12px;
+}
+/* ------- */
+
 .button:hover,
 .button:focus {
     color: var(--brend-color);
@@ -166,7 +183,7 @@ header {
     margin-left: auto;
 }
 .contacts-items + .contacts-items {
-    margin-left: 50px;
+    margin-left: 30px;
 }
 .nav-contacts .link {
     color: var(--text-main-color)
@@ -174,7 +191,11 @@ header {
 .nav-site .active {
     color: var(--brend-color);
 }
-
+.contacts-icon {
+    vertical-align: text-bottom;
+    margin-right: 10px;
+    fill: currentColor;
+}
 /* -main- */
 /* Герой */
 .hero {
@@ -182,10 +203,16 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    max-width: 1600px;
+    margin: 0 auto;
     padding-top: 200px;
     padding-bottom: 200px;
     
     background-color: #2F303A;
+    background-image:  linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../images/bg-hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .hero-title {
     margin-bottom: 30px;
@@ -208,6 +235,13 @@ header {
 }
 .dignity-items + .dignity-items {
     margin-left: 30px;
+}
+.dignity-icons {
+    border-radius: 4px;
+    padding: 25px 100px;
+    margin-bottom: 30px;
+
+    background-color: var(--background-secondary-color);
 }
 .dignity-title {
     margin-bottom: 10px;
@@ -249,12 +283,15 @@ header {
 .team-items {
     background-color: var(--white-color);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-about {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .team-name {
+    margin-bottom: 10px;
+
     color: var(--text-title-color);
     font-weight: 500;
     font-size: 16px;
@@ -263,12 +300,58 @@ header {
     letter-spacing: 0.03em;
 }
 .team-profession {
-    margin-top: 10px;
+    margin-bottom: 16px;
 
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
+}
+.team-social {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+.team-icon {
+    fill: var(--social-icon-color);
+}
+.team-link:hover .team-icon,
+.team-link:focus .team-icon  {
+    fill: var(--white-color);
+}
+.team-link:hover,
+.team-link:focus {
+    background-color: var(--brend-color);
+}
+
+/* Постоянные клиенты */
+.clients {
+
+}
+.clients-title {
+    margin-bottom: 50px;
+}
+.clients-list {
+    display: flex;
+    justify-content: space-between;
+}
+.clients-link {
+    border: 1px solid var(--social-icon-color);
+    border-radius: 4px;
+}
+.clients-link:hover,
+.clients-link:focus {
+    border-color: var(--brend-color);
+}
+.clients-icon {
+    display: block;
+    padding: 16px 32px;
+    fill: var(--social-icon-color)
+}
+.clients-icon:hover,
+.clients-icon:focus {
+    fill: var(--brend-color);
 }
 
 /* -footer- */
@@ -277,6 +360,7 @@ header {
     background-color: var(--background-footer-color);
 }
 .footer-container {
+    display: flex;
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -298,6 +382,37 @@ header {
 .address-contact {
     color: rgba(255, 255, 255, 0.6);
 }
+.footer-items + .footer-items {
+    margin-left: 70px;
+}
+.footer-items:nth-child(2) {
+    width: 206px;
+    padding-top: 12px;
+}
+.footer-title {
+    margin-bottom: 20px;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16/14);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+}
+.footer-soclink {
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-soclink:hover,
+.footer-soclink:focus {
+    background-color: var(--brend-color);
+}
+.footer-socicon {
+    fill: var(--white-color);
+}
+
 
 /* -- Портфолио html -- */
 
@@ -329,10 +444,12 @@ header {
 .filter-items + .filter-items {
     margin-left: 8px;
 }
+
 .filter-button:hover,
 .filter-button:focus {
     color: var(--white-color);
     background-color: var(--brend-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* список примера работ */
 .portfolio-list {
@@ -344,6 +461,10 @@ header {
     width: calc((1170px - (30px*2))/3);
     margin: 15px;
     border: 1px solid #EEEEEE;
+}
+.portfolio-element:hover,
+.portfolio-element:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-about {
     padding: 20px 24px;
