--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ header {
 .portfolio-items {
     width: calc((1170px - (30px*2))/3);
     margin: 15px;
-    border: 1px solid #EEEEEE;
+    outline: 1px solid #EEEEEE;
 }
 .portfolio-element:hover,
 .portfolio-element:focus {
